--- a/examples/aframe/portal/index.html
+++ b/examples/aframe/portal/index.html
@@ -12,7 +12,7 @@
     <script src="//cdn.8thwall.com/web/xrextras/xrextras.js"></script>
 
     <!-- 8thWall Web - Replace the app key here with your own app key -->
-    <script async src="//apps.8thwall.com/xrweb?appKey=XXXXXXXX"></script>
+    <script async src="//apps.8thwall.com/xrweb?appKey=aYaVx9V4o8tBfsOvkE994jMsse9K3fEPMD1v8p20BwTOiIZ7xqhkfUzVJYWJpYiLIlZvo5"></script>
 
     <script>
       // This component gives the invisible hider walls the property they need
